fixed issue with vertical resizing overflow

--- a/src/main/frontend/src/Variables.css
+++ b/src/main/frontend/src/Variables.css
@@ -65,6 +65,7 @@
   --medium-blue: #404B69;
   --dark-blue: #283149;
   --white: #FFFFFF;
+  --red: #FF0000;
   --outfit:outfit;
   --roboto:roboto;
   --button-ct:button-ct;
